fixing image stretching issue

--- a/src/stories/story.css
+++ b/src/stories/story.css
@@ -6,10 +6,11 @@
 .story-media{
   margin-bottom: 8px;
   cursor: pointer;
+  justify-content: center;
 }
 .story-media img{
-  width: 100%;
-  height: 100%;
+  max-width: 576px;
+  maax-height: 576px;
 }
 .story-content{
   flex-flow: column wrap;
